--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -10,6 +10,7 @@
 <body>
     <div class="main-content">
         {{>header}}
+        <p>This website was made by Dylan Turner. It uses data from mapbox.com and darksky.net.</p>
         <img class='portrait' src="/img/random.jpg" alt="piccy" />
     </div>
     {{>footer}}
